feat: rename all files to mdx

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,6 +8,8 @@ import Glide from '../components/Glide.astro'
 
 <Layout title="Home | Gerben Veenhof">
 
+# Backend Redefined
+
 Welcome to my humble site, you can find all sorts of informational posts and my proud works. While also giving a sneak peek for you to try it out yourselves.
 
 ## How it al started
