--- a/src/content/posts/2023-01-06_astro_to_the_rescue.mdx
+++ b/src/content/posts/2023-01-06_astro_to_the_rescue.mdx
@@ -1,5 +1,5 @@
 ---
-title: Astro to the rescue 🆘
+title: Astro to the rescue 🚀
 author: Gerben Veenhof
 description: As you might have seen, I have some Vue.js experience, and I am also good on the way on learning the composition API in Vue version 3.0.
 keywords: [ Astro, JavaScript, MDX ]
@@ -14,4 +14,13 @@ As I would like to transition away from PHP with my current background I wanted 
 
 But I am still waiting for the static page rendering for Nuxt Image so that I can optimize my images locally instead of doing it by hand every time.
 
-So take a look around.
+## The Issue at hand 
+
+While I was almost done I found out that most of the plugins for Nuxt 3 where completely not done yet with the conversion, even after such a long time. And it turns out that static rendering took the lowest priority for most plugins.
+That meant that the Image plugin didn't work yet, and that the content (for markdown usage in the project) also wasn't supported for generated sites.
+
+So I had to bite the bullet. Do I go with something else or wait for a fix?
+
+## Astro to the Rescue 🚀
+
+I heared of Astro before, but before landing on this framework I wanted to search a bit more to what suites my needs.
