--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -3,28 +3,44 @@ title: Backend redefined
 description: Welcome to my humble site, you can find all sorts of informational posts and my proud works. While also giving a sneak peek for you to try it out yourselves.
 keywords: Gerben Veenhof, portfolio, works, posts, backend
 ---
-import Layout from '../layouts/Layout.astro'
-import Glide from '../components/Glide.astro'
+
+import Layout from "../layouts/Layout.astro";
+import Glide from "../components/Glide.astro";
 
 <Layout title="Home | Gerben Veenhof">
 
 # Backend Redefined
 
-Welcome to my humble site, you can find all sorts of informational posts and my proud works. While also giving a sneak peek for you to try it out yourselves.
+Welcome to my humble site, you can find all sorts of informational posts and my proud works. While also giving a sneak peek for things I am looking into for the future.
 
 ## How it al started
 
-I Started of my career with interests in computer science at a very young age. And took that to school where I choose to be an aspiring game developer. But soon found out that making games was almost the same as writing code for websites or other applications. Hence, I started to learn a new and higher degree for application development. At which I am running my last year of right now.
+I Started of my career with interests in computer science at a very young age. And took that to school where I choose to be an aspiring game developer. 
+But soon found out that making games was almost the same as writing code for websites or other applications. 
+Hence, I started to learn a new and higher degree for application development. 
+After graduation and having done 4 internships at different work environments I am currently employed at [Sogeti](https://www.sogeti.nl/) and though them I am employed and working at 
+[ING](https://ing.nl/)
 
-With a short list of some of my experiences:
+## Experience
 
-- Backend | Java, Kotlin, Ruby, Pyton, PHP, C# (Unity), C# .NET
-- Frontend | Vue with NPM & Yarn
-- Cloud | AWS (Cloudformation, cloudfront, lambda's, gateway integration etc.)
+With a short list of some of my experiences in:
 
-<Glide/>
+- **Backend**: Java, Kotlin, Ruby, Pyton, PHP, C# (Unity)
+- **Databases**: Cassandra, PostgreSQL, MySQL
+- **Frontend**: Astro, NPM, Yarn, Nuxt, Vue
+- **Cloud**: OpenShift, AWS
+
+*(From recetly used to last used)*
+
+## Future
+
+Things I want to look at in the future that peak my intrests include things like C/C++ and Rust. I really want to learn more lower level languages as well. 
+So for 2023's Advent of Code I might try out one of these languages.
+
+<Glide />
 
 ## Want more info about me?
 
-Sent me a message though one of the following social media outlets to get my full Curriculum Vitae.
+Sent me a message though one of the following socials or check my work experience on my [LinkedIn](https://www.linkedin.com/in/gerbenveenhof/) page.
+
 </Layout>
