feat: rename posts

--- a/src/content/posts/2021-01-08_advent_of_code.mdx
+++ b/src/content/posts/2021-01-08_advent_of_code.mdx
@@ -1,5 +1,5 @@
 ---
-title: Advent of Code 2020
+title: Advent of Code 2020 (Python) 🎄
 author: Gerben Veenhof
 description: Each year there is the Advent of Code In which you can compete to be the fastest programmer of the north pole 🎅🎄🛷.
 keywords: [ AOC, advent, Python ]
