--- a/src/content/posts/2023-01-06_gone_with_the_old_in_with_the_new.mdx
+++ b/src/content/posts/2023-01-06_gone_with_the_old_in_with_the_new.mdx
@@ -1,18 +1,17 @@
 ---
-title: Astro to the rescue 🚀
+title: Gone with the old, In with the new 🆕
 author: Gerben Veenhof
 description: As you might have seen, I have some Vue.js experience, and I am also good on the way on learning the composition API in Vue version 3.0.
 keywords: [ Astro, JavaScript, MDX ]
 date: 2023-02-23
 ---
 
-As you might have seen, I have some Vue.js experience, and I am also good on the way on learning the composition API in Vue version 3.0. Now, one of my friends mentioned what Nuxt was. It's a framework to easily write smaller applications in, while also being able to do lots more.
-
+As you might have seen, I have some Vue.js experience, and I am also good on the way on learning the composition API in Vue version 3.0. Now, one of my friends mentioned what Nuxt was. 
+It's a framework to easily write smaller applications in, while also being able to do lots more.
 Like rendering your website statically and just serving that.
 
 As I would like to transition away from PHP with my current background I wanted to try it out. But Nuxt 3 wasn't released yet when I wanted to start working on it. So I waited, and waited. And after a while the first Nuxt 3 versions came along including Nuxt Content which makes writing markdown for pages a lot easier.
-
-But I am still waiting for the static page rendering for Nuxt Image so that I can optimize my images locally instead of doing it by hand every time.
+But I am still waiting for the static page rendering for Nuxt Image, so that I can optimize my images locally instead of doing it by hand every time.
 
 ## The Issue at hand 
 
