feat: add icons to last post titles

--- a/src/content/posts/2020-06-26_new_website.mdx
+++ b/src/content/posts/2020-06-26_new_website.mdx
@@ -1,5 +1,5 @@
 ---
-title: New website
+title: New website 🆕
 author: Gerben Veenhof
 description: This website was way quicker to build then expected, I used Jigsaw to quickly template up a website and do some more styling to make a nice looking piece.
 keywords: [ Jigsaw, portfolio ]
