--- a/src/content/posts/2021-01-08_advent_of_code.mdx
+++ b/src/content/posts/2021-01-08_advent_of_code.mdx
@@ -5,12 +5,16 @@ description: Each year there is the Advent of Code In which you can compete to b
 keywords: [ AOC, advent, Python ]
 date: 2021-01-08
 ---
+import Button from "../../components/Button.astro"
+import FlexCenter from "../../components/FlexCenter.astro"
 
 Each year there is the [Advent of Code](https://adventofcode.com/). In which you can compete to be the fastest programmer of the north pole 🎅🎄🛷.
 
-The goal I have set for myself is to choose a language each year, depending on my current experiences. And to make everything in that chosen language. In 2019 I choose Ruby, as I used that on my first internship. But this year In 2020 I choose Python, as that was the primary language I was using for the minor that I was doing with my current study. In conjunction of AWS Lambda usage.
+The goal I have set for myself is to choose a language each year, depending on my current experiences. And to make everything in that chosen language. 
+In 2019 I choose Ruby, as I used that on my first internship. But this year In 2020 I choose Python, as that was the primary language I was using for the minor that I was doing with my current study. In conjunction of AWS Lambda usage.
 
-But I also have to complete last years challenges, after I have done the current year. As for the current year, I already got 2 stars for the first six days. Al while using python and learning some things on the way that I didn't know yet. Purely because I haven't used them before.
+But I also have to complete last years challenges, after I have done the current year. As for the current year, I already got 2 stars for the first six days. 
+Al while using python and learning some things on the way that I didn't know yet. Purely because I haven't used them before.
 
 As for classes I thought that making a variable above the constructor, that it would be a variable per instance.
 
@@ -30,6 +34,7 @@ class Wheel:
         print(f"This wheel has {self.spokes} spokes")
 ```
 
+
 But the learning doesn't stop there. While I used python for the first time as an intern. I never wrote any tests for the code that I made.
 
 And we had to test our code so that [SonarQube](https://www.sonarqube.org/) could scan our tests results and see what the code coverage was.
@@ -44,8 +49,6 @@ So I'm still not done with learning the small details of Python. Or for that fac
 
 Next on our target list is Java for my last project for school.
 
-::content-flex-center
-    ::content-button{href="https://github.com/nlxdodge/Advent-Of-Code" icon="fab fa-github"}
-    Advent of Code Repository
-    ::
-::
+<FlexCenter>
+    <Button href="https://github.com/nlxdodge/Advent-Of-Code" icon="mdi:github">Advent of Code Repository</Button>
+</FlexCenter>
