--- a/src/content/posts/2023-01-06_gone_with_the_old_in_with_the_new.mdx
+++ b/src/content/posts/2023-01-06_gone_with_the_old_in_with_the_new.mdx
@@ -5,6 +5,9 @@ description: As you might have seen, I have some Vue.js experience, and I am als
 keywords: [ Astro, JavaScript, MDX ]
 date: 2023-02-23
 ---
+import Button from "../../components/Button.astro"
+import FlexCenter from "../../components/FlexCenter.astro"
+
 
 As you might have seen, I have some Vue.js experience, and I am also good on the way on learning the composition API in Vue version 3.0. Now, one of my friends mentioned what Nuxt was. 
 It's a framework to easily write smaller applications in, while also being able to do lots more.
@@ -23,3 +26,7 @@ So I had to bite the bullet. Do I go with something else or wait for a fix?
 ## Astro to the Rescue 🚀
 
 I heared of Astro before, but before landing on this framework I wanted to search a bit more to what suites my needs.
+
+<FlexCenter>
+    <Button href="https://github.com/nlxdodge/portfolio-astro" icon="mdi:github">Astro Portfolio Repository</Button>
+</FlexCenter>
