--- a/src/content/works/scrapyard.mdx
+++ b/src/content/works/scrapyard.mdx
@@ -5,9 +5,12 @@ author: Gerben Veenhof
 date: 2020-10-28
 image: scrapyard
 description: Scrapyard is a mod collection of weird ideas I wanted to build but not put in a separete mod.
-keywords: [ Minecraft, modding, mods, Java ]
+keywords: [Minecraft, modding, mods, Java]
 category: Java
 ---
+
+import Button from "../../components/Button.astro";
+import FlexCenter from "../../components/FlexCenter.astro";
 
 Scrapyard is my first ever Minecraft mod that is basically a bunch of ideas gathered together into one mod.
 Right now it's still in production as I am trying to learn the new Fabric API as that works So much better than Forge.
@@ -41,8 +44,8 @@ What I am still planning to build, or what I am working on at the moment:
 
 And some other people already re-created a Recycler as a mod, so I am still thinking of another name.
 
-::content-flex-center
-    ::content-button{href="https://github.com/nlxdodge/scrapyard" icon="fab fa-github"}
+<FlexCenter>
+  <Button href="https://github.com/nlxdodge/scrapyard" icon="mdi:github">
     Scrapyard Repository
-    ::
-::
+  </Button>
+</FlexCenter>
