--- a/src/content/posts/2021-12-27_advent_of_code.mdx
+++ b/src/content/posts/2021-12-27_advent_of_code.mdx
@@ -5,6 +5,8 @@ description: This year I had the ambition to actually use Java for Advent of Cod
 keywords: [ AOC, Advent, Java ]
 date: 2021-12-27
 ---
+import Button from "../../components/Button.astro"
+import FlexCenter from "../../components/FlexCenter.astro"
 
 This year I had the ambition to actually use Java for Advent of Code (AOC). And needless to say, I got pretty far before falling down because of time issues and trying to solve it in a good way. What I actually should have done is use the quick and dirty way where possible so that I didn't lose a lot of time.
 
@@ -33,8 +35,6 @@ int size = 10;
 String[][][] = new String[size][size][size];
 ```
 
-::content-flex-center
-    ::content-button{href="https://github.com/nlxdodge/Advent-Of-Code" icon="fab fa-github"}
-    Advent of Code Repository
-    ::
-::
+<FlexCenter>
+    <Button href="https://github.com/nlxdodge/Advent-Of-Code" icon="mdi:github">Advent of Code Repository</Button>
+</FlexCenter>
