fix: buttons text overflow and image not working

--- a/src/content/works/korfbal_trainer.mdx
+++ b/src/content/works/korfbal_trainer.mdx
@@ -46,10 +46,6 @@ export interface Category {
 I am, as of writing, still not done with the project. The generator needs some more attention before it is actually usable. But the collection of exercises is already available to look at. Which for our team, is a nice helping hand.
 
 <FlexCenter>
-  <Button href="https://github.com/nlxdodge/korfbal-trainer" icon="mdi:github">
-    Korfbal Trainer Repository
-  </Button>
-  <Button href="https://korfbal-trainer.netlify.app/" icon="ph:link-bold">
-    Korfbal Trainer App
-  </Button>
+  <Button href="https://github.com/nlxdodge/korfbal-trainer" icon="mdi:github">Korfbal Trainer Repository</Button>
+  <Button href="https://korfbal-trainer.netlify.app/" icon="ph:link-bold">Korfbal Trainer App</Button>
 </FlexCenter>
