--- a/src/content/works/scrapyard.mdx
+++ b/src/content/works/scrapyard.mdx
@@ -45,7 +45,5 @@ What I am still planning to build, or what I am working on at the moment:
 And some other people already re-created a Recycler as a mod, so I am still thinking of another name.
 
 <FlexCenter>
-  <Button href="https://github.com/nlxdodge/scrapyard" icon="mdi:github">
-    Scrapyard Repository
-  </Button>
+  <Button href="https://github.com/nlxdodge/scrapyard" icon="mdi:github">Scrapyard Repository</Button>
 </FlexCenter>
