--- a/src/content/works/aq3d_bot.mdx
+++ b/src/content/works/aq3d_bot.mdx
@@ -9,10 +9,14 @@ keywords: [Discord, bot, Java]
 category: Java
 ---
 
+import { Image } from "@astrojs/image/components";
 import Button from "../../components/Button.astro";
 import FlexCenter from "../../components/FlexCenter.astro";
+import HeaderImage from "../../assets/images/works/aq3d_bot.png";
 
-<FlexCenter>![Discord Bot](/src/assets/images/works/aq3d_bot.png)</FlexCenter>
+<FlexCenter>
+  <Image src={HeaderImage} alt="Discord Bot"></Image>
+</FlexCenter>
 
 [AQ3D](https://aq3d.com/) is the latest game from [Artix Entertainment](https://www.artix.com/).
 I was playing the game and also switching between a lot of different servers for some area's in the game. But not knowing which server had the most people, the Discord bot came in for the rescue.
@@ -37,7 +41,5 @@ client.getEventDispatcher().on(MessageCreateEvent.class).map(MessageCreateEvent:
 For the current state of the project, check out Github with the Link button.
 
 <FlexCenter>
-  <Button href="https://github.com/nlxdodge/C.A.T.E" icon="mdi:github">
-    C.A.T.E Repository
-  </Button>
+  <Button href="https://github.com/nlxdodge/C.A.T.E" icon="mdi:github">C.A.T.E Repository</Button>
 </FlexCenter>
