--- a/src/content/works/keydungeon.mdx
+++ b/src/content/works/keydungeon.mdx
@@ -50,7 +50,5 @@ But for a portfolio of keydungeon it doesn't really matter to much, as I don't u
 I do plan to upgrade Keydungeon, but it's on the bottom of the list. So planning to make a new PHP API and a vue 3 front-end for starters.
 
 <FlexCenter>
-  <Button href="https://key.gerbenveenhof.nl/" icon="ph:link-bold">
-    Keydungeon Website
-  </Button>
+  <Button href="https://key.gerbenveenhof.nl/" icon="ph:link-bold">Keydungeon Website</Button>
 </FlexCenter>
