fix: all images to pictures for better optimalization for SEO

--- a/src/content/posts/2023-01-06_gone_with_the_old_in_with_the_new.mdx
+++ b/src/content/posts/2023-01-06_gone_with_the_old_in_with_the_new.mdx
@@ -29,4 +29,5 @@ I heared of Astro before, but before landing on this framework I wanted to searc
 
 <FlexCenter>
     <Button href="https://github.com/nlxdodge/portfolio-astro" icon="mdi:github">Astro Portfolio Repository</Button>
+    <Button href="https://atsro.build/" icon="ph:link-bold">Astro Website</Button>
 </FlexCenter>
