--- a/src/content/posts/2022-09-07_docker_alternatives.mdx
+++ b/src/content/posts/2022-09-07_docker_alternatives.mdx
@@ -2,24 +2,60 @@
 title: An actual usefull Docker Alternative 🐋
 author: Gerben Veenhof
 description: Using something else then Docker, is there even something else just as good? I get the question a lot on my work.
-keywords: [ Docker, Podman, Buildah ]
+keywords: [Docker, Podman, Buildah]
 date: 2022-09-07
 ---
 
-Using something else then Docker, is there even something else just as good? I get the question a lot on my work. Because lots of developers are acustomed to having the Docker GUI instead of using the CLI interface.
-When you don't use the GUI and you need to upgrade to a version prior to version `3.6.0`? That means you have to pay for a fee if your company is to big. Most of the time that should not be an issue, and the company will pay.
+import { Picture } from "@astrojs/image/components";
+import Button from "../../components/Button.astro";
+import FlexCenter from "../../components/FlexCenter.astro";
+import PodmanWebsite from "../../assets/images/posts/podman_desktop.png";
 
-But what if you only used the GUI for some simple turning on/off and creating some basic images and checking their logs/state? Then Docker GUI has a lot of functionality that you aren't even using. So I started looking for some alternatives some time ago, but never bothered to try it out.
+<FlexCenter>
+  <Picture
+    src={PodmanWebsite}
+    alt="Podman Website"
+    widths={[1024, 500]}
+    aspectRatio={16 / 9}
+    sizes="(max-width: 676px), (min-width: 676px)"
+    fit="outside"
+  />
+</FlexCenter>
 
-So on that topic, have you ever heard of Podman and Buildah? Well I did not before I started searching. So for now I started to look into how it all works under the hood and while looking for GUI tools I found a new project that just started a couple months ago. [Podman Desktop](https://podman-desktop.io/) is a GUI for podman that does a lot of things for you, just need to run simple containers? Podman Desktop has you covered.
+Using something else then Docker, is there even something else just as good? I get the question a lot on my work.
+Lots of developers are acustomed to having the Docker GUI instead of using the CLI interface, including me.
+When you don't use the GUI and you need to upgrade to a version prior to version `3.6.0`? That means you have to pay to use Docker now, if your company is big enough.
+For most people and businesses that would not be an issue, and the company will just pay the licenses. But that sometimes takes a while before that happends.
 
-But it is missing some things that I use all the time, even at work. That feature is composing containers (normally with docker-compose, but that is according to a spec [Compose Specification](https://github.com/compose-spec/compose-spec/blob/master/spec.md)).
+Lets say that if you only used the GUI for some simple turning on & off and creating some basic images and checking their logs/state?
+Then Docker GUI has a lot of functionality that you aren't even using. So I started looking for some alternatives.
 
-For now people wrote a Python library called [Podman Compose](https://github.com/containers/podman-compose) to do this, but the official implementation is still in the backlog for Podman Desktop. So don't expect it anytime soon.
+So on that topic, have you ever heard of Podman and Buildah? Well I did not before I started searching after hearing the news we had to use an older version of Docker.
+I started to look into how it all works under the hood and while looking for GUI tools I found a new project that just started a couple months ago when I started writing this article.
+[Podman Desktop](https://podman-desktop.io/) is a GUI for Podman that does a lot of things for you, just need to run simple containers? Podman Desktop has you covered.
 
-For now I run the build every time again with:
+But it is missing some things that I use all the time, even at work. That feature is composing containers
+(normally with docker-compose, but that is according to this spec [Compose Specification](https://github.com/compose-spec/compose-spec/blob/master/spec.md)).
+
+For now other the open source space has created a Python library called [Podman Compose](https://github.com/containers/podman-compose) to do this,
+but the official implementation is still in the backlog for Podman Desktop. So I am patiently waiting for that to be included in the main instalation of Podman Desktop.
+
+For now I run the build with the following snippet:
+(Note that most commands are just a drop in replacement from Docker itself, you can also make a Docker alias to make it easier for yourself).
 
 ```bash
 podman build -t "name" .
 podman run -p 3000:3000 name
 ```
+
+Want to give Podman a try yourself, install it with WinGet?
+
+```powershell
+winget install RedHat.Podman-Desktop
+```
+
+Or check out their website and download it manually:
+
+<FlexCenter>
+    <Button href="https://podman-desktop.io/" icon="ph:link-bold">Podman Desktop Website</Button>
+</FlexCenter>
