feat: change keywords to tag

--- a/src/content/posts/2020-06-26_new_website.mdx
+++ b/src/content/posts/2020-06-26_new_website.mdx
@@ -2,7 +2,7 @@
 title: New website 🆕
 author: Gerben Veenhof
 description: This website was way quicker to build then expected, I used Jigsaw to quickly template up a website and do some more styling to make a nice looking piece.
-keywords: [ Jigsaw, portfolio ]
+tags: [ Jigsaw, portfolio ]
 date: 2020-06-26
 ---
 This website was way quicker to build then expected, I used [Jigsaw](https://jigsaw.tighten.co/) to quickly template up a website and do some more styling to make a nice looking piece. And it doesn't use a database, but rather markdown files for the contents of the works and posts.
