--- a/src/content/posts/2022-12-26_advent_of_code.mdx
+++ b/src/content/posts/2022-12-26_advent_of_code.mdx
@@ -2,7 +2,7 @@
 title: Advent of Code 2022 (Kotlin) 🎄
 author: Gerben Veenhof
 description: This year I had the ambition to actually use Java for Advent of Code (AOC). And needless to say, I got pretty far.
-keywords: [ AOC, Advent, Kotlin ]
+tags: [ AOC, Advent, Kotlin ]
 date: 2022-12-26
 draft: true
 ---
