--- a/src/content/works/aq3d_bot.mdx
+++ b/src/content/works/aq3d_bot.mdx
@@ -5,7 +5,7 @@ author: Gerben Veenhof
 date: 2020-11-26
 image: aq3d_bot
 description: A Discord bot once made to get the server status and other information. Superseeded by a new bot of the Discord owner.
-keywords: [Discord, bot, Java]
+tags: [Discord, bot, Java]
 category: Java
 ---
 
