--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Backend redefined
 description: Welcome to my humble site, you can find all sorts of informational posts and my proud works. While also giving a sneak peek for you to try it out yourselves.
-keywords: Gerben Veenhof, portfolio, works, posts, backend
+tags: Gerben Veenhof, portfolio, works, posts, backend
 ---
 
 import Layout from "../layouts/Layout.astro";
