--- a/src/content/posts/2020-06-29_ruby_miner.mdx
+++ b/src/content/posts/2020-06-29_ruby_miner.mdx
@@ -2,7 +2,7 @@
 title: Ruby Miner 💎
 author: Gerben Veenhof
 description: In my current year I was learning Ruby as part of my internship. In the beginning I stuggled a lot to understand the dynamic language as is.
-keywords: [ Ruby, internship ]
+tags: [ Ruby, internship ]
 date: 2020-06-29
 ---
 import Button from "../../components/Button.astro"
