--- a/src/content/posts/2022-09-07_docker_alternatives.mdx
+++ b/src/content/posts/2022-09-07_docker_alternatives.mdx
@@ -2,7 +2,7 @@
 title: An actual usefull Docker Alternative 🐋
 author: Gerben Veenhof
 description: Using something else then Docker, is there even something else just as good? I get the question a lot on my work.
-keywords: [Docker, Podman, Buildah]
+tags: [Docker, Podman, Buildah]
 date: 2022-09-07
 ---
 
