--- a/src/content/works/keydungeon.mdx
+++ b/src/content/works/keydungeon.mdx
@@ -5,7 +5,7 @@ author: Gerben Veenhof
 date: 2021-08-09
 image: keydungeon
 description: Keydungeon is a passwordmanager writen in PHP, can generate passwords, see login details and more.
-keywords: [passwordmanager, PHP]
+tags: [passwordmanager, PHP]
 category: PHP/JS
 ---
 
