feat: fix labels contents for work

--- a/src/content/works/korfbal_trainer.mdx
+++ b/src/content/works/korfbal_trainer.mdx
@@ -5,7 +5,7 @@ author: Gerben Veenhof
 date: 2021-08-06
 image: korfbal_trainer
 description: The Korfbal Trainer app is a small VueJS 3 application that can generate Korfbal Trainings from a selection of dynamic exercises.
-tags: [forfbal, Vue, Vue3, trainer]
+tags: [Korfbal, Vue, Vue3, Sport]
 category: Typescript/Vue
 ---
 
