--- a/src/content/works/scrapyard.mdx
+++ b/src/content/works/scrapyard.mdx
@@ -5,7 +5,7 @@ author: Gerben Veenhof
 date: 2020-10-28
 image: scrapyard
 description: Scrapyard is a mod collection of weird ideas I wanted to build but not put in a separete mod.
-tags: [Minecraft, modding, mods, Java]
+tags: [Minecraft, Modding, Mods, Java]
 category: Java
 ---
 
