chore: move all assets to public folder

--- a/src/content/posts/2020-06-29_ruby_miner.mdx
+++ b/src/content/posts/2020-06-29_ruby_miner.mdx
@@ -2,7 +2,7 @@
 title: Ruby Miner 💎
 author: Gerben Veenhof
 description: In my current year I was learning Ruby as part of my internship. In the beginning I stuggled a lot to understand the dynamic language as is.
-tags: [ Ruby, internship ]
+tags: [ Ruby, Internship ]
 date: 2020-06-29
 ---
 import Button from "../../components/Button.astro"
@@ -17,7 +17,7 @@ While we did get tought the basics of Dynamic languages, we has to learn a lot o
 
 As a test to see if I could actually use Ruby well, I started the 2019 [Advent of Code](https://adventofcode.com/2019). While at first I still had some things to learn because I never used them. The basics where there. And could quickly adapt to new Gems to use.
 
-![Advent of Code](/images/posts/advent_of_code.webp)
+![Advent of Code](/assets/images/posts/advent_of_code.png)
 
 While I still am not currently done with 2019, in my spare time I try to finish it before the next one comes out.
 
