--- a/src/content/posts/2022-09-07_docker_alternatives.mdx
+++ b/src/content/posts/2022-09-07_docker_alternatives.mdx
@@ -9,11 +9,10 @@ date: 2022-09-07
 import { Picture } from "@astrojs/image/components";
 import Button from "../../components/Button.astro";
 import FlexCenter from "../../components/FlexCenter.astro";
-import PodmanWebsite from "../../assets/images/posts/podman_desktop.png";
 
 <FlexCenter>
   <Picture
-    src={PodmanWebsite}
+    src="/assets/images/posts/podman_desktop.png"
     alt="Podman Website"
     widths={[1024, 500]}
     aspectRatio={16 / 9}
