--- a/src/content/works/aq3d_bot.mdx
+++ b/src/content/works/aq3d_bot.mdx
@@ -12,11 +12,10 @@ category: Java
 import { Picture } from "@astrojs/image/components";
 import Button from "../../components/Button.astro";
 import FlexCenter from "../../components/FlexCenter.astro";
-import HeaderImage from "../../assets/images/works/aq3d_bot.png";
 
 <FlexCenter>
   <Picture
-    src={HeaderImage}
+    src="/assets/images/works/aq3d_bot.png"
     alt="Discord Bot"
     widths={[1024, 500]}
     aspectRatio={16 / 8}
