--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,11 +10,11 @@ import LabelCollection from "../components/LabelCollection.astro";
 
 <Layout title="Home | Gerben Veenhof">
 
-# Backend Redefined
+# My programming and coding odyssey
 
 Welcome to my humble site, you can find all sorts of informational posts and my proud works. While also giving a sneak peek for things I am looking into for the future.
 
-## How it al started
+### How it al started 🐣
 
 I Started of my career with interests in computer science at a very young age. And took that to school where I choose to be an aspiring game developer.
 But soon found out that making games was almost the same as writing code for websites or other applications.
@@ -22,7 +22,7 @@ Hence, I started to learn a new and higher degree for application development.
 After graduation and having done 4 internships at different work environments I am currently employed at [Sogeti](https://www.sogeti.nl/) and though them I am employed and working at
 [ING](https://ing.nl/)
 
-## Experience
+### Experience with 🧑🏻‍💻
 
 While I am learning lots of new things, here is a short list of things I am currenly working with and have experiences with:
 
@@ -43,9 +43,9 @@ While I am learning lots of new things, here is a short list of things I am curr
     labels={["Astro", "Vue", "NPM", "Yarn", "Nuxt"]}
   />
 
-_From recetly used to last used_
+_(From recetly used to last used)_
 
-## Future
+### The Future 🚀
 
 Things I want to look at in the future that peak my intrests include things like C/C++ and Rust. I really want to learn more lower level languages as well.
 So for 2023's Advent of Code I might try out one of these languages.
