chore: fix label margins

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -19,8 +19,8 @@ Welcome to my humble site, you can find all sorts of informational posts and my 
 I Started of my career with interests in computer science at a very young age. And took that to school where I choose to be an aspiring game developer.
 But soon found out that making games was almost the same as writing code for websites or other applications.
 Hence, I started to learn a new and higher degree for application development.
-After graduation and having done 4 internships at different work environments I am currently employed at [Sogeti](https://www.sogeti.nl/) and though them I am employed and working at
-[ING](https://ing.nl/)
+After graduation and having done 4 internships at different work environments, I am currently employed at [Sogeti](https://www.sogeti.nl/) and though them I am working for
+[ING](https://ing.nl/).
 
 ### Experience with 🧑🏻‍💻
 
