--- a/src/content/posts/2023-01-06_gone_with_the_old_in_with_the_new.mdx
+++ b/src/content/posts/2023-01-06_gone_with_the_old_in_with_the_new.mdx
@@ -1,5 +1,5 @@
 ---
-title: Gone with the old, In with the new 🆕
+title: Gone with the old, In with the 🆕
 author: Gerben Veenhof
 description: As you might have seen, I have some Vue.js experience, and I am also good on the way on learning the composition API in Vue version 3.0.
 tags: [ Astro, JavaScript, MDX ]
@@ -16,7 +16,7 @@ Like rendering your website statically and just serving that.
 As I would like to transition away from PHP with my current background I wanted to try it out. But Nuxt 3 wasn't released yet when I wanted to start working on it. So I waited, and waited. And after a while the first Nuxt 3 versions came along including Nuxt Content which makes writing markdown for pages a lot easier.
 But I am still waiting for the static page rendering for Nuxt Image, so that I can optimize my images locally instead of doing it by hand every time.
 
-## The Issue at hand 
+## The Issue at hand 👋🏻
 
 While I was almost done I found out that most of the plugins for Nuxt 3 where completely not done yet with the conversion, even after such a long time. And it turns out that static rendering took the lowest priority for most plugins.
 That meant that the Image plugin didn't work yet, and that the content (for markdown usage in the project) also wasn't supported for generated sites.
@@ -29,5 +29,5 @@ I heared of Astro before, but before landing on this framework I wanted to searc
 
 <FlexCenter>
     <Button href="https://github.com/nlxdodge/portfolio-astro" icon="mdi:github">Astro Portfolio Repository</Button>
-    <Button href="https://atsro.build/" icon="ph:link-bold">Astro Website</Button>
+    <Button href="https://atsro.build/" icon="ph:link-bold">Build with Astro</Button>
 </FlexCenter>
