fix: images not being displayed

--- a/src/content/posts/2020-06-29_ruby_miner.mdx
+++ b/src/content/posts/2020-06-29_ruby_miner.mdx
@@ -8,7 +8,6 @@ date: 2020-06-29
 import Button from "../../components/Button.astro"
 import FlexCenter from "../../components/FlexCenter.astro"
 
-
 In my current year I was learning Ruby as part of my internship. In the beginning I stuggled a lot to understand the dynamic language as is.
 
 So as a beginning ruby developer I always wonderd why nowhere in schools we got some Ruby. It's either beginning with something easy like [Python](https://python.org/) and when being more experienced it was using a combination of [Java](https://www.java.com/nl/), [C# .NET](https://dotnet.microsoft.com/) and Javascript frameworks like [Angular](https://angular.io/) and [Vue](https://vuejs.org/).
@@ -17,7 +16,7 @@ While we did get tought the basics of Dynamic languages, we has to learn a lot o
 
 As a test to see if I could actually use Ruby well, I started the 2019 [Advent of Code](https://adventofcode.com/2019). While at first I still had some things to learn because I never used them. The basics where there. And could quickly adapt to new Gems to use.
 
-![Advent of Code](/assets/images/posts/advent_of_code.png)
+![Advent of Code](../../assets/images/posts/advent_of_code.png)
 
 While I still am not currently done with 2019, in my spare time I try to finish it before the next one comes out.
 
