--- a/src/content/posts/2022-09-07_docker_alternatives.mdx
+++ b/src/content/posts/2022-09-07_docker_alternatives.mdx
@@ -5,21 +5,10 @@ description: Using something else then Docker, is there even something else just
 tags: [Docker, Podman, Buildah]
 date: 2022-09-07
 ---
-
-import { Picture } from "@astrojs/image/components";
 import Button from "../../components/Button.astro";
 import FlexCenter from "../../components/FlexCenter.astro";
 
-<FlexCenter>
-  <Picture
-    src="/assets/images/posts/podman_desktop.png"
-    alt="Podman Website"
-    widths={[1024, 500]}
-    aspectRatio={16 / 9}
-    sizes="(max-width: 676px), (min-width: 676px)"
-    fit="outside"
-  />
-</FlexCenter>
+![Podman Desktop](../../assets/images/posts/podman_desktop.png)
 
 Using something else then Docker, is there even something else just as good? I get the question a lot on my work.
 Lots of developers are acustomed to having the Docker GUI instead of using the CLI interface, including me.
