--- a/src/content/works/aq3d_bot.mdx
+++ b/src/content/works/aq3d_bot.mdx
@@ -9,20 +9,10 @@ tags: [Discord, Java]
 category: Java
 ---
 
-import { Picture } from "@astrojs/image/components";
 import Button from "../../components/Button.astro";
 import FlexCenter from "../../components/FlexCenter.astro";
 
-<FlexCenter>
-  <Picture
-    src="/assets/images/works/aq3d_bot.png"
-    alt="Discord Bot"
-    widths={[1024, 500]}
-    aspectRatio={16 / 8}
-    sizes="(max-width: 676px), (min-width: 676px)"
-    fit="outside"
-  />
-</FlexCenter>
+![AQ3D Bot](../../assets/images/works/aq3d_bot.png)
 
 [AQ3D](https://aq3d.com/) is the latest game from [Artix Entertainment](https://www.artix.com/).
 I was playing the game and also switching between a lot of different servers for some area's in the game. But not knowing which server had the most people, the Discord bot came in for the rescue.
