fix: images not being loaded in works page

--- a/src/content/works/aq3d_bot.mdx
+++ b/src/content/works/aq3d_bot.mdx
@@ -3,7 +3,8 @@ order: 4
 title: C.A.T.E Discord Bot
 author: Gerben Veenhof
 date: 2020-11-26
-image: aq3d_bot
+image: ../../assets/images/works/aq3d_bot.png
+image_alt: AQ3D Bot in Discord
 description: A Discord bot once made to get the server status and other information. Superseeded by a new bot of the Discord owner.
 tags: [Discord, Java]
 category: Java
