--- a/src/content/works/keydungeon.mdx
+++ b/src/content/works/keydungeon.mdx
@@ -3,7 +3,8 @@ order: 1
 title: KeyDungeon
 author: Gerben Veenhof
 date: 2021-08-09
-image: keydungeon
+image: ../../assets/images/works/keydungeon.png
+image_alt: Keydungeon Password Manager
 description: Keydungeon is a passwordmanager writen in PHP, can generate passwords, see login details and more.
 tags: [Passwords, PHP, Javascript]
 category: PHP/JS
