--- a/src/content/works/korfbal_trainer.mdx
+++ b/src/content/works/korfbal_trainer.mdx
@@ -3,7 +3,8 @@ order: 2
 title: Korfbal Trainer
 author: Gerben Veenhof
 date: 2021-08-06
-image: korfbal_trainer
+image: ../../assets/images/works/korfbal_trainer.png
+image_alt: Korfbal Trainer Live App
 description: The Korfbal Trainer app is a small VueJS 3 application that can generate Korfbal Trainings from a selection of dynamic exercises.
 tags: [Korfbal, Vue, Vue3, Sport]
 category: Typescript/Vue
