--- a/src/content/works/aq3d_bot.mdx
+++ b/src/content/works/aq3d_bot.mdx
@@ -12,8 +12,11 @@ category: Java
 
 import Button from "../../components/Button.astro";
 import FlexCenter from "../../components/FlexCenter.astro";
+import { Image } from "astro:assets";
 
-![AQ3D Bot](../../assets/images/works/aq3d_bot.png)
+import AQ3D from "../../assets/images/works/aq3d_bot.png"
+
+<Image src={AQ3D} alt="AQ3D Bot" format="avif" />
 
 [AQ3D](https://aq3d.com/) is the latest game from [Artix Entertainment](https://www.artix.com/).
 I was playing the game and also switching between a lot of different servers for some area's in the game. But not knowing which server had the most people, the Discord bot came in for the rescue.
