fix: color schema switching

--- a/src/content/posts/2022-09-07_docker_alternatives.mdx
+++ b/src/content/posts/2022-09-07_docker_alternatives.mdx
@@ -9,7 +9,7 @@ import Button from "../../components/Button.astro";
 import FlexCenter from "../../components/FlexCenter.astro";
 import { Image } from "astro:assets";
 
-import PodmanDesktop from "../../assets/images/posts/podman_desktop.png"
+import PodmanDesktop from "../../assets/images/posts/podman_desktop.png";
 
 <Image src={PodmanDesktop} alt="Podman Desktop" format="avif" />
 
