docs: update content

--- a/src/content/posts/2021-01-08_advent_of_code.mdx
+++ b/src/content/posts/2021-01-08_advent_of_code.mdx
@@ -42,7 +42,8 @@ So we quickly picked up PyTest to write some tests. But it wasn't to easy. We ha
 
 So being used in conjunction with AWS, we used DynamoDB to save the data we received through the API which we also had to test.
 
-Another teammate in our group found out about Moto3 (The testing framework that amazon wrote for doing this specific task). And we saw that it used decorators. Wait decorators in Python? I never new that was thing until that day.
+Another teammate in our group found out about Moto3 (The testing framework that amazon wrote for doing this specific task). And we saw that it used decorators.
+Wait decorators in Python? I never new that was thing until that day.
 
 For our last assignment of our minor we always had to have a test coverage of more than 80 percent.
 So I'm still not done with learning the small details of Python. Or for that fact any language. But we will get there eventually.
