--- a/src/content/posts/2020-06-29_ruby_miner.mdx
+++ b/src/content/posts/2020-06-29_ruby_miner.mdx
@@ -13,15 +13,19 @@ import AdventOfCode from "../../assets/images/posts/advent_of_code.png"
 
 In my current year I was learning Ruby as part of my internship. In the beginning I stuggled a lot to understand the dynamic language as is.
 
-So as a beginning ruby developer I always wonderd why nowhere in schools we got some Ruby. It's either beginning with something easy like [Python](https://python.org/) and when being more experienced it was using a combination of [Java](https://www.java.com/nl/), [C# .NET](https://dotnet.microsoft.com/) and Javascript frameworks like [Angular](https://angular.io/) and [Vue](https://vuejs.org/).
+So as a beginning ruby developer I always wonderd why nowhere in schools we got some Ruby. 
+It's either beginning with something easy like [Python](https://python.org/) and when being more experienced it was using a combination of [Java](https://www.java.com/nl/),
+ [C# .NET](https://dotnet.microsoft.com/) and Javascript frameworks like [Angular](https://angular.io/) and [Vue](https://vuejs.org/).
 
 While we did get tought the basics of Dynamic languages, we has to learn a lot on our own on that side of the fence. Any documentation is always very welcomed for us backend developers.
 
-As a test to see if I could actually use Ruby well, I started the 2019 [Advent of Code](https://adventofcode.com/2019). While at first I still had some things to learn because I never used them. The basics where there. And could quickly adapt to new Gems to use.
+As a test to see if I could actually use Ruby well, I started the 2019 [Advent of Code](https://adventofcode.com/2019) using Ruby. 
+While at first I still had some things to learn because I never used them. The basics where there. And could quickly adapt to new Gems to use.
 
 <Image src={AdventOfCode} alt="Advent of Code" format="avif" />
 
-While I still am not currently done with 2019, in my spare time I try to finish it before the next one comes out.
+I didn't finish it, but I aspire to try to challenge myself to jump right down each year with another language. 
+Next year I am going to choose Python as this is an easier language that I also wanted to try, as it is close to Ruby in some kind of sense. 
 
 <FlexCenter>
     <Button href="https://github.com/nlxdodge/Advent-Of-Code" icon="mdi:github">Advent of Code Repository</Button>
