feat: add more text

--- a/src/content/posts/2023-08-22_learning_japanese.mdx
+++ b/src/content/posts/2023-08-22_learning_japanese.mdx
@@ -8,10 +8,10 @@ date: 2023-02-23
 import Button from "../../components/Button.astro"
 import FlexCenter from "../../components/FlexCenter.astro"
 
-Some of my friends already know that I secretly always wanted to go to Japan, but without speaking or actually having learned any words of the language it's going to be quite the task.
-So I started learning Japanese on Duolingo to see how far I can get.
+Some of my friends already know that I secretly always wanted to go to Japan, but without speaking or actually having learned any words of the language it's going to be quite the task. 
+I do actually enjoy some any now and then in public transport to kill some time, so I started learning Japanese on Duolingo to see how far I can get.
 
-I started out with simple words like `mizu` meaning water and `gohen`
+I started out with simple words like `mizu` meaning water and `gohan` being rice, but eventually we got harder parts being `kudasai` please and even pronouncing ``
 
 <FlexCenter>
     <Button href="https://www.duolingo.com/" icon="arcticons:duolingo-alt">Duolingo</Button>=
