--- a/src/content/posts/2023-08-22_learning_japanese.mdx
+++ b/src/content/posts/2023-08-22_learning_japanese.mdx
@@ -8,11 +8,17 @@ date: 2023-02-23
 import Button from "../../components/Button.astro"
 import FlexCenter from "../../components/FlexCenter.astro"
 
-Some of my friends already know that I secretly always wanted to go to Japan, but without speaking or actually having learned any words of the language it's going to be quite the task. 
-I do actually enjoy some any now and then in public transport to kill some time, so I started learning Japanese on Duolingo to see how far I can get.
+Some of my friends already know that I secretly always want to go to Japan, but without speaking or actually having learned any words of the language apart from the generic Anime stuff, it's going to be quite the task. 
+I do actually enjoy some anime now and then in public transport to kill some time, so I started learning Japanese on Duolingo to see how far I can get.
 
-I started out with simple words like `mizu` meaning water and `gohan` being rice, but eventually we got harder parts being `kudasai` please and even pronouncing ``
+It starts out with simple words like `mizu` meaning water and `gohan` being rice, but eventually you will get harder words like `kudasai` meaning please.
+Currently I am at a 60 day streak 🔥, but I will continue learning till the day that we go on holiday to Japan. And Maintaining the streak is "easy" for now, as I am learning the standard alphabet called Katakana.
+For exmaple `すし` being `su` and `shi` and more simple characters alike, but actually starting to hear and recognise the characters is harder to master.
+
+For example the letters `ち` and `ら` look alike in DuoLingo, just as `は` and `ほ` but they are in fact way different.
+For people outside Germanic languages this can be seen the same as `i` and `j`. They look alike but are way different from what they mean and how the language works. 
+But can be hard for first time learners trying to get a grasp on all the characters in the alphabet.
 
 <FlexCenter>
-    <Button href="https://www.duolingo.com/" icon="arcticons:duolingo-alt">Duolingo</Button>=
+    <Button href="https://www.duolingo.com/" icon="arcticons:duolingo-alt">Duolingo</Button>
 </FlexCenter>
