feat: minor grammar fixes

--- a/src/content/posts/2023-08-22_learning_japanese.mdx
+++ b/src/content/posts/2023-08-22_learning_japanese.mdx
@@ -15,9 +15,9 @@ It starts out with simple words like `mizu` meaning water and `gohan` being rice
 Currently I am at a 60 day streak 🔥, but I will continue learning till the day that we go on holiday to Japan. And Maintaining the streak is "easy" for now, as I am learning the standard alphabet called Katakana.
 For exmaple `すし` being `su` and `shi` and more simple characters alike, but actually starting to hear and recognise the characters is harder to master.
 
-For example the letters `ち` and `ら` look alike in DuoLingo, just as `は` and `ほ` but they are in fact way different.
-For people outside Germanic languages this can be seen the same as `i` and `j`. They look alike but are way different from what they mean and how the language works. 
-But can be hard for first time learners trying to get a grasp on all the characters in the alphabet.
+And the letters `ち` and `ら` look alike in DuoLingo, just as `は` and `ほ`, but they are in fact way different.
+For people outside Germanic languages this can be seen as the same as `i` and `j`. They look alike but are way different from what they mean and how the language works. 
+This can be hard for first time learners trying to get a grasp on all the characters in the alphabet.
 
 <FlexCenter>
     <Button href="https://www.duolingo.com/" icon="arcticons:duolingo-alt">Duolingo</Button>
