feat: add automatic heading for Advent of Code post

--- a/src/content/posts/2023-12-01_advent_of_code.mdx
+++ b/src/content/posts/2023-12-01_advent_of_code.mdx
@@ -8,6 +8,8 @@ date: 2023-12-01
 import Button from "../../components/Button.astro"
 import FlexCenter from "../../components/FlexCenter.astro"
 
+## Contents
+
 The year 2023, I started of with the Rust programming language. Why did I pick Rust? 
 I wanted to challenge myself again this year but with a somewhat more lower level programming language, but still with some handholding where you can just jump into. 
 Rust was the perfect example for this if I can speak for myself. 
@@ -124,11 +126,6 @@ Day eight on the other hand was a lot easier again, although I did have to look 
 I wanted to use pop on an array to remove the first item, I search and found the `VecDeque` which is basically a `Vec` but with some of the Queue functions.
 Also for part 2 it was really easy I only had to get the first item and actually do the calculation instead of doing a sum.
 
-
-<FlexCenter>
-    <Button href="https://github.com/nlxdodge/Advent-Of-Code" icon="mdi:github">Advent of Code Repository</Button>
-</FlexCenter>
-
 ### Day 10
 
 Day 10 was kind of weird to do but I had some time issues and never got around it. This is the day where I got stuck because I was overthinking a lot.
@@ -140,3 +137,7 @@ Still working on part 2 though.
 I am finally taking a deeper dive in the world of modules, right now I have been copy pasting the whole code from the `main.rs` file to the appropriate file, like `aoc10.rs` each time. But this is becomming bothersome now.
 
 I found out that using mod works when running from the main.rs file. So using `use aoc11;` make my life easy so I can just call the run method on each day instead.
+
+<FlexCenter>
+    <Button href="https://github.com/nlxdodge/Advent-Of-Code" icon="mdi:github">Advent of Code Repository</Button>
+</FlexCenter>
