feat: add tags and popular tags to posts

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -28,7 +28,7 @@ While I am learning lots of new things, here is a short list of things I am curr
 
 - <LabelCollection
     name="Backend: "
-    labels={["Java", "Kotlin", "Ruby", "Python", "PHP", "C# (Unity)"]}
+    labels={["Java", "Kotlin", "Rust", "Ruby", "Python", "PHP", "C# with Unity"]}
   />
 - <LabelCollection
     name="Databases: "
@@ -36,11 +36,15 @@ While I am learning lots of new things, here is a short list of things I am curr
   />
 - <LabelCollection
     name="Cloud: "
-    labels={["OpenShift", "AWS", "Azure (Limited)"]}
+    labels={["OpenShift", "AWS", "Azure"]}
   />  
 - <LabelCollection
     name="Frontend: "
-    labels={["Astro", "Vue", "NPM", "Yarn", "Nuxt"]}
+    labels={["Astro", "Vue", "Angular", "NPM",]}
+  />
+- <LabelCollection
+    name="Tooling: "
+    labels={["Docker", "Podman", "Jetbrains/Intellij", "VSCode", "DBeaver",]}
   />
 
 _(From recetly used to last used)_
